--- a/開発メモ.md
+++ b/開発メモ.md
@@ -1,7 +1,9 @@
 #開発用メモ
 
+##つぶやき  
+誰か手伝って  
 
-#新規開発アイデア
+##新規開発アイデア
 ・TimeAttackGhost C# XAML 
 TAで自分のさっきのプレイを並べてゴーストのようにできたら面白いなあという発想。  
 キャプチャストリームの録画保存、リプレイ機能を実装。  
